--- a/canciones.html
+++ b/canciones.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Canciones - Saanti</title>
     <link rel="stylesheet" href="css/canciones.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
     <script src="https://kit.fontawesome.com/8d1318581d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@300;400&family=M+PLUS+2:wght@100&family=M+PLUS+Rounded+1c:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -39,16 +40,18 @@
         </div>
       </nav>
 <br>
-<h1 class="centrar">Todas mis canciones</h1>
+<h1 class="centrar">Todas mis canciones <i class="fas fa-music"></i></h1>
+<br>
 <br>
       <div class="container-estreno ">
-          <hr>
+          
       <div class="cancion">
           <h5>COVER | El Perdedor - Enrique Iglesias ft. Marco Antonio Solís| SAANTI</h5>
         <div class="container-img-estreno">
             <img src="img/hqdefault.webp" alt="El perdedor - Saanti" class="img-estreno">
           </div>
           <br>
+          <h6>Escuchala gratís en:</h6>
           <div class="escuchala-container">
             <div class="spotify-container">
               <a href=""><img src="img/spoty.png" alt=""></a>
@@ -57,18 +60,19 @@
               <a href="https://www.youtube.com/channel/UC2X83zoJYKCWSiftvjVAXFw/featured"><img src="img/yt2-removebg.png" alt=""></a>
             </div>
             <div class="descargar-container">
-              <a href="" class="centrar"><i class="fas fa-arrow-circle-down"></i> Descargar</a>
+              <a href="img/yt.png" download="El Perdedor - SAANTI" class="centrar"><i class="fas fa-arrow-circle-down"></i> Descargar</a>
             </div>
           </div>
         </div>
         <br>
-        <hr>
+        <hr class="hr">
         <div class="cancion">
             <h5>COVER | Nota De Amor - Carlos Vives, Wisin, Daddy Yankee | SAANTI</h5>
           <div class="container-img-estreno">
               <img src="img/hqdefault (1).webp" alt="Nota de Amor - Saanti" class="img-estreno">
             </div>
             <br>
+            <h6>Escuchala gratís en:</h6>
             <div class="escuchala-container">
               <div class="spotify-container">
                 <a href=""><img src="img/spoty.png" alt=""></a>
@@ -82,13 +86,14 @@
             </div>
           </div>
           <br>
-          <hr>
+          <hr class="hr">
           <div class="cancion">
             <h5>COVER | TU y YO - Adexe y Nau | SAANTI</h5>
           <div class="container-img-estreno">
               <img src="img/hqdefault (2).webp" alt="Tu y Yo - Saanti" class="img-estreno">
             </div>
             <br>
+            <h6>Escuchala gratís en:</h6>
             <div class="escuchala-container">
               <div class="spotify-container">
                 <a href=""><img src="img/spoty.png" alt=""></a>
@@ -102,13 +107,14 @@
             </div>
           </div>
           <br>
-          <hr>
+          <hr class="hr">
           <div class="cancion">
             <h5>COVER | Ademas de Mi - Rusherking, Tiago PZK | SAANTI</h5>
           <div class="container-img-estreno">
               <img src="img/hqdefault (3).webp" alt="Ademas de mí - Saanti" class="img-estreno">
             </div>
             <br>
+            <h6>Escuchala gratís en:</h6>
             <div class="escuchala-container">
               <div class="spotify-container">
                 <a href=""><img src="img/spoty.png" alt=""></a>
