puse el desk y tab

--- a/canciones.html
+++ b/canciones.html
@@ -40,7 +40,7 @@
         </div>
       </nav>
 <br>
-<h1 class="centrar">Todas mis canciones <i class="fas fa-music"></i></h1>
+<h1 class="">Todas mis canciones <i class="fas fa-music"></i></h1>
 <br>
 <br>
       <div class="container-estreno ">
