--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML5>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <meta name="description" content="Musica de SAANTI">
     <meta name="keywords" content="SAANTI, cover, musica">
     <title>Saanti</title>
-   
+    <meta name="description" content="Pagina Oficial de SAANTI¡ musica, contacto y más!">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/animaciones.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -53,7 +53,7 @@
         <br>
       
         <div class="container-img-estreno ">
-          <img src="img/hqdefault.webp" alt="El perdedor - Saanti" class="img-estreno">
+          <iframe width="100%" height="30%" src="https://www.youtube.com/embed/2vVvy-p0pIQ" style="border-radius: 10px;"></iframe>
         </div>
       <br>
         <h6 class="tituloMobile">Escuchala gratís en:</h6>
@@ -148,7 +148,7 @@
           <a href="https://twitter.com/ILA_1969" class="spoty-footer" style="background-color: black;"><i class="fab fa-spotify" style="color: #18ae4e;"></i></a>
 
           <a href="https://www.youtube.com/channel/UC2X83zoJYKCWSiftvjVAXFw/featured" class="youtube-footer"  style="color: white;"><i class="fab fa-youtube"></i></a>
-          <a href="#" class="tiktok"><i class="fab fa-tiktok"style="color: white;" ></i></a>
+          <a href="#" class="tiktok"><i class="fab fa-tiktok"style="color: white; " ></i></a>
       </div>
      
 <br>
