--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 
 <br><br>
-    </div>
+    
 
     <div>
       <div class="footer-basic mt-10" style="font-family: sans-serif">
@@ -143,7 +143,7 @@
               ><i class="fab fa-instagram ig" style="color: white"></i
             ></a>
             <a
-              href="https://twitter.com/ILA_1969"
+              href="#"
               class="spoty-footer"
               style="background-color: black"
               ><i class="fab fa-spotify" style="color: #18ae4e"></i
@@ -155,7 +155,7 @@
               style="color: white"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="#" class="tiktok"
+            <a href="https://www.tiktok.com/@__saanti_" class="tiktok"
               ><i class="fab fa-tiktok" style="color: white"></i
             ></a>
           </div>
@@ -164,13 +164,13 @@
           <!-- links varios -->
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a style="color: white" href="/index.html">Home</a>
+              <a style="color: white" href="index.html">Home</a>
             </li>
             <li class="list-inline-item">
               <a style="color: white" href="https://www.youtube.com/channel/UC2X83zoJYKCWSiftvjVAXFw">SAANTI</a>
             </li>
             <li class="list-inline-item">
-              <a style="color: white" href="#">Hackembo</a>
+              <a style="color: white" href="https://www.instagram.com/hackembo/">Hackembo</a>
             </li>
             <li class="list-inline-item">
               <a style="color: white" href="mailto: jmbp.dev@gmail.com?subject = Feedback&body = Message">Contacto</a>
