--- a/canciones.html
+++ b/canciones.html
@@ -237,7 +237,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="header-li-a" href="canciones.html">Mí Música</a>
+                <a class="header-li-a contacto" href="canciones.html">Mí Música</a>
               </li>
             </ul>
           </div>
@@ -458,7 +458,7 @@
               ><i class="fab fa-instagram ig" style="color: white"></i
             ></a>
             <a
-              href="https://twitter.com/ILA_1969"
+              href="#"
               class="spoty-footer"
               style="background-color: black"
               ><i class="fab fa-spotify" style="color: #18ae4e"></i
@@ -470,7 +470,7 @@
               style="color: white"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="#" class="tiktok"
+            <a href="https://www.tiktok.com/@__saanti_" class="tiktok"
               ><i class="fab fa-tiktok" style="color: white"></i
             ></a>
           </div>
@@ -479,13 +479,13 @@
           <!-- links varios -->
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a style="color: white" href="/index.html">Home</a>
+              <a style="color: white" href="index.html">Home</a>
             </li>
             <li class="list-inline-item">
               <a style="color: white" href="https://www.youtube.com/channel/UC2X83zoJYKCWSiftvjVAXFw">SAANTI</a>
             </li>
             <li class="list-inline-item">
-              <a style="color: white" href="#">Hackembo</a>
+              <a style="color: white" href="https://www.instagram.com/hackembo/">Hackembo</a>
             </li>
             <li class="list-inline-item">
               <a style="color: white" href="mailto: jmbp.dev@gmail.com?subject = Feedback&body = Message">Contacto</a>
